At a Glance: fixes alignment of remaining left dashitem in the grid

--- a/_inc/client/at-a-glance/style.scss
+++ b/_inc/client/at-a-glance/style.scss
@@ -258,6 +258,10 @@
 
 	@include breakpoint( ">660px" ) {
 		margin-right: rem( 16px );
+
+		&:last-child {
+			flex-basis: calc( 50% - .5rem ); // rem function doesn't work in calc()
+		}
 	}
 }
 // end flexbox nesting
